ajusted social links on mobile, corrected js

--- a/app/assets/scss/modules/_layout.scss
+++ b/app/assets/scss/modules/_layout.scss
@@ -82,6 +82,10 @@ main {
 
     @include mobile {
       margin-right: 0px;
+
+      &:last-child img {
+        width: 140px;
+      }
     }
 
 
